data/derived/comb/progs/unify/prog4782.ml.out
Characters 67-71:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         unit
